      (Kai Zheng)

      HADOOP-12011. Allow to dump verbose information to ease debugging in raw erasure coders
      (Kai Zheng)

      HADOOP-12065. Using more meaningful keys in EC schema. (Kai Zheng)

      HADOOP-12060. Fix ByteBuffer usage for raw erasure coders. (Kai Zheng via
      jing9)

      HADOOP-11921. Enhance tests for erasure coders. (Kai Zheng)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

    HADOOP-11746. rewrite test-patch.sh (aw)

    HADOOP-12416. Trash messages should be handled by Logger instead of being
    delivered on System.out. (Mingliang Liu via aajisaka)

  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

    HADOOP-11843. Make setting up the build environment easier.
    (Niels Basjes via cnauroth)

    HADOOP-11949. Add user-provided plugins to test-patch (Sean Busbey via aw)

    HADOOP-8934. Shell command ls should include sort options (Jonathan Allen
    via aw)

    HADOOP-10971. Add -C flag to make `hadoop fs -ls` print filenames only.
    (Kengo Seki via aajisaka)

    HADOOP-5732. Add SFTP FileSystem. (Ramtin Boustani and Inigo Goiri via
    cdouglas)

    HADOOP-12360. Create StatsD metrics2 sink. (Dave Marion via stevel)

    HADOOP-10300. Allowed deferred sending of call responses. (Daryn Sharp via
    yliu)

  IMPROVEMENTS

    HADOOP-12458. Retries is typoed to spell Retires in parts of
    hadoop-yarn and hadoop-common
    (Neelesh Srinivas Salian via harsh)

    HADOOP-12271. Hadoop Jar Error Should Be More Explanatory
    (Josh Elser via harsh)

    HADOOP-6842. "hadoop fs -text" does not give a useful text representation
    of MapWritable objects (Akira Ajisaka via bobby)

    HADOOP-11719. [Fsshell] Remove bin/hadoop reference from
    GenericOptionsParser default help text.