@@ -89,6 +89,19 @@ name|Configured
 implements|implements
 name|RawErasureCoder
 block|{
+DECL|field|emptyChunk
+specifier|private
+specifier|static
+name|byte
+index|[]
+name|emptyChunk
+init|=
+operator|new
+name|byte
+index|[
+literal|4096
+index|]
+decl_stmt|;
 DECL|field|numDataUnits
 specifier|private
 specifier|final
@@ -138,6 +151,52 @@ name|numDataUnits
 operator|+
 name|numParityUnits
 expr_stmt|;
+block|}
+comment|/**    * Make sure to return an empty chunk buffer for the desired length.    * @param leastLength    * @return empty chunk of zero bytes    */
+DECL|method|getEmptyChunk (int leastLength)
+specifier|protected
+specifier|static
+name|byte
+index|[]
+name|getEmptyChunk
+parameter_list|(
+name|int
+name|leastLength
+parameter_list|)
+block|{
+if|if
+condition|(
+name|emptyChunk
+operator|.
+name|length
+operator|>=
+name|leastLength
+condition|)
+block|{
+return|return
+name|emptyChunk
+return|;
+comment|// In most time
+block|}
+synchronized|synchronized
+init|(
+name|AbstractRawErasureCoder
+operator|.
+name|class
+init|)
+block|{
+name|emptyChunk
+operator|=
+operator|new
+name|byte
+index|[
+name|leastLength
+index|]
+expr_stmt|;
+block|}
+return|return
+name|emptyChunk
+return|;
 block|}
 annotation|@
 name|Override
@@ -196,13 +255,16 @@ block|{
 comment|// Nothing to do by default
 block|}
 comment|/**    * Ensure a buffer filled with ZERO bytes from current readable/writable    * position.    * @param buffer a buffer ready to read / write certain size bytes    * @return the buffer itself, with ZERO bytes written, the position and limit    *         are not changed after the call    */
-DECL|method|resetBuffer (ByteBuffer buffer)
+DECL|method|resetBuffer (ByteBuffer buffer, int len)
 specifier|protected
 name|ByteBuffer
 name|resetBuffer
 parameter_list|(
 name|ByteBuffer
 name|buffer
+parameter_list|,
+name|int
+name|len
 parameter_list|)
 block|{
 name|int
@@ -213,35 +275,20 @@ operator|.
 name|position
 argument_list|()
 decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-name|pos
-init|;
-name|i
-operator|<
-name|buffer
-operator|.
-name|limit
-argument_list|()
-condition|;
-operator|++
-name|i
-control|)
-block|{
 name|buffer
 operator|.
 name|put
 argument_list|(
-operator|(
-name|byte
-operator|)
+name|getEmptyChunk
+argument_list|(
+name|len
+argument_list|)
+argument_list|,
 literal|0
+argument_list|,
+name|len
 argument_list|)
 expr_stmt|;
-block|}
 name|buffer
 operator|.
 name|position
@@ -271,41 +318,39 @@ name|int
 name|len
 parameter_list|)
 block|{
-for|for
-control|(
-name|int
-name|i
-init|=
-name|offset
-init|;
-name|i
-operator|<
-name|len
-condition|;
-operator|++
-name|i
-control|)
-block|{
-name|buffer
-index|[
-name|i
-index|]
-operator|=
-operator|(
 name|byte
-operator|)
+index|[]
+name|empty
+init|=
+name|getEmptyChunk
+argument_list|(
+name|len
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|arraycopy
+argument_list|(
+name|empty
+argument_list|,
 literal|0
+argument_list|,
+name|buffer
+argument_list|,
+name|offset
+argument_list|,
+name|len
+argument_list|)
 expr_stmt|;
-block|}
 return|return
 name|buffer
 return|;
 block|}
-comment|/**    * Check and ensure the buffers are of the length specified by dataLen, also    * ensure the buffers are direct buffers or not according to isDirectBuffer.    * @param buffers the buffers to check    * @param allowNull whether to allow any element to be null or not    * @param dataLen the length of data available in the buffer to ensure with    * @param isDirectBuffer is direct buffer or not to ensure with    */
-DECL|method|ensureLengthAndType (ByteBuffer[] buffers, boolean allowNull, int dataLen, boolean isDirectBuffer)
+comment|/**    * Check and ensure the buffers are of the length specified by dataLen, also    * ensure the buffers are direct buffers or not according to isDirectBuffer.    * @param buffers the buffers to check    * @param allowNull whether to allow any element to be null or not    * @param dataLen the length of data available in the buffer to ensure with    * @param isDirectBuffer is direct buffer or not to ensure with    * @param isOutputs is output buffer or not    */
+DECL|method|checkParameterBuffers (ByteBuffer[] buffers, boolean allowNull, int dataLen, boolean isDirectBuffer, boolean isOutputs)
 specifier|protected
 name|void
-name|ensureLengthAndType
+name|checkParameterBuffers
 parameter_list|(
 name|ByteBuffer
 index|[]
@@ -319,6 +364,9 @@ name|dataLen
 parameter_list|,
 name|boolean
 name|isDirectBuffer
+parameter_list|,
+name|boolean
+name|isOutputs
 parameter_list|)
 block|{
 for|for
@@ -395,14 +443,27 @@ name|isDirectBuffer
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|isOutputs
+condition|)
+block|{
+name|resetBuffer
+argument_list|(
+name|buffer
+argument_list|,
+name|dataLen
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
-comment|/**    * Check and ensure the buffers are of the length specified by dataLen.    * @param buffers the buffers to check    * @param allowNull whether to allow any element to be null or not    * @param dataLen the length of data available in the buffer to ensure with    */
-DECL|method|ensureLength (byte[][] buffers, boolean allowNull, int dataLen)
+block|}
+comment|/**    * Check and ensure the buffers are of the length specified by dataLen. If is    * output buffers, ensure they will be ZEROed.    * @param buffers the buffers to check    * @param allowNull whether to allow any element to be null or not    * @param dataLen the length of data available in the buffer to ensure with    * @param isOutputs is output buffer or not    */
+DECL|method|checkParameterBuffers (byte[][] buffers, boolean allowNull, int dataLen, boolean isOutputs)
 specifier|protected
 name|void
-name|ensureLength
+name|checkParameterBuffers
 parameter_list|(
 name|byte
 index|[]
@@ -414,6 +475,9 @@ name|allowNull
 parameter_list|,
 name|int
 name|dataLen
+parameter_list|,
+name|boolean
+name|isOutputs
 parameter_list|)
 block|{
 for|for
@@ -466,6 +530,22 @@ operator|+
 name|dataLen
 argument_list|)
 throw|;
+block|}
+elseif|else
+if|if
+condition|(
+name|isOutputs
+condition|)
+block|{
+name|resetBuffer
+argument_list|(
+name|buffer
+argument_list|,
+literal|0
+argument_list|,
+name|dataLen
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
