@@ -182,7 +182,7 @@ condition|)
 block|{
 return|return;
 block|}
-name|ensureLengthAndType
+name|checkParameterBuffers
 argument_list|(
 name|inputs
 argument_list|,
@@ -191,9 +191,11 @@ argument_list|,
 name|dataLen
 argument_list|,
 name|usingDirectBuffer
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
-name|ensureLengthAndType
+name|checkParameterBuffers
 argument_list|(
 name|outputs
 argument_list|,
@@ -202,6 +204,8 @@ argument_list|,
 name|dataLen
 argument_list|,
 name|usingDirectBuffer
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 if|if
@@ -521,22 +525,26 @@ condition|)
 block|{
 return|return;
 block|}
-name|ensureLength
+name|checkParameterBuffers
 argument_list|(
 name|inputs
 argument_list|,
 literal|true
 argument_list|,
 name|dataLen
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
-name|ensureLength
+name|checkParameterBuffers
 argument_list|(
 name|outputs
 argument_list|,
 literal|false
 argument_list|,
 name|dataLen
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 name|int
