@@ -1363,32 +1363,6 @@ operator|.
 name|clear
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|i
-operator|>=
-name|numDataBlocks
-condition|)
-block|{
-name|Arrays
-operator|.
-name|fill
-argument_list|(
-name|buffers
-index|[
-name|i
-index|]
-operator|.
-name|array
-argument_list|()
-argument_list|,
-operator|(
-name|byte
-operator|)
-literal|0
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 DECL|method|release ()
