@@ -4735,50 +4735,16 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|cleanBuffer
-argument_list|(
 name|targetBuffers
 index|[
 name|i
 index|]
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-DECL|method|cleanBuffer (ByteBuffer buffer)
-specifier|private
-name|ByteBuffer
-name|cleanBuffer
-parameter_list|(
-name|ByteBuffer
-name|buffer
-parameter_list|)
-block|{
-name|Arrays
-operator|.
-name|fill
-argument_list|(
-name|buffer
-operator|.
-name|array
-argument_list|()
-argument_list|,
-operator|(
-name|byte
-operator|)
-literal|0
-argument_list|)
-expr_stmt|;
-return|return
-operator|(
-name|ByteBuffer
-operator|)
-name|buffer
 operator|.
 name|clear
 argument_list|()
-return|;
+expr_stmt|;
+block|}
+block|}
 block|}
 comment|// send an empty packet to mark the end of the block
 DECL|method|endTargetBlocks (boolean[] targetsStatus)
